k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexvion
  labels:
    app.kubernetes.io/part-of: nexvion
