k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexvion
  namespace: nexvion
spec:
  type: ClusterIP
  selector:
    app: nexvion
  ports:
    - name: http
      port: 80
      targetPort: 8080
