k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexvion
  namespace: nexvion
spec:
  ingressClassName: nginx
  rules:
    - host: nexvion.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexvion
                port:
                  number: 80
